--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,11 +7,19 @@
       rel="stylesheet"
       type="text/css"
     />
+    <link
+      rel="shortcut icon"
+      href="https://raw.githubusercontent.com/Treposting/mongoose-starter/main/views/ts-node.svg  "
+      type="image/x-icon"
+    />
+    <title>Server is running</title>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-white">
     <div class="flex justify-center items-center h-screen">
-      <div className="card w-96 bg-slate-50/60 backdrop-blur-2xl transition-colors duration-500">
+      <div
+        className="card w-96 bg-slate-50/60 backdrop-blur-2xl transition-colors duration-500"
+      >
         <div class="card w-96 bg-neutral text-neutral-content">
           <div class="card-body items-center text-center">
             <h2 class="card-title">Congratulation!</h2>
